# aerosol-interface

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: tests.yml
doc/: Doxyfile  index.html
doc/doxygen_files/: header.html  mainpage.F90
doxygen_files/: mainpage.F90
html/: absorption__optical__depth_8F90.html  absorption__optical__depth_8F90_source.html  accessor_8F90.html  accessor_8F90_source.html  aerosol_8F90.html  aerosol_8F90_source.html  aerosol__state_8F90.html  aerosol__state_8F90_source.html  annotated.html  asymmetry__factor_8F90.html  asymmetry__factor_8F90_source.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_a7c02b86d5e499e41a92dffb7c250843.html  dir_b4a6d9de55b89407938343c0ef020b02.html  environmental__state_8F90.html  environmental__state_8F90_source.html  extinction__optical__depth_8F90.html  extinction__optical__depth_8F90_source.html  files.html  forward__scattered__fraction_8F90.html  forward__scattered__fraction_8F90_source.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  index.html  interfaceai__aerosol_1_1longwave__optics__array-members.html  interfaceai__aerosol_1_1longwave__optics__array.html  interfaceai__aerosol_1_1longwave__optics__scalar-members.html  interfaceai__aerosol_1_1longwave__optics__scalar.html  interfaceai__aerosol_1_1new__optics-members.html  interfaceai__aerosol_1_1new__optics.html  interfaceai__aerosol_1_1new__state-members.html  interfaceai__aerosol_1_1new__state.html  interfaceai__aerosol_1_1print__state-members.html  interfaceai__aerosol_1_1print__state.html  interfaceai__aerosol_1_1shortwave__optics__array-members.html  interfaceai__aerosol_1_1shortwave__optics__array.html  interfaceai__aerosol_1_1shortwave__optics__scalar-members.html  (+62 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  (+20 more)
latex/: absorption__optical__depth_8F90.tex  accessor_8F90.tex  aerosol_8F90.tex  aerosol__state_8F90.tex  annotated.tex  asymmetry__factor_8F90.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_a7c02b86d5e499e41a92dffb7c250843.tex  dir_b4a6d9de55b89407938343c0ef020b02.tex  environmental__state_8F90.tex  extinction__optical__depth_8F90.tex  files.tex  forward__scattered__fraction_8F90.tex  hierarchy.tex  index.tex  interfaceai__aerosol_1_1longwave__optics__array.tex  interfaceai__aerosol_1_1longwave__optics__scalar.tex  interfaceai__aerosol_1_1new__optics.tex  interfaceai__aerosol_1_1new__state.tex  interfaceai__aerosol_1_1print__state.tex  interfaceai__aerosol_1_1shortwave__optics__array.tex  interfaceai__aerosol_1_1shortwave__optics__scalar.tex  interfaceai__aerosol__state_1_1dump__state.tex  interfaceai__aerosol__state_1_1load__state.tex  interfaceai__aerosol__state_1_1randomize.tex  interfaceai__aerosol__state_1_1raw__size.tex  interfaceai__optics_1_1property__name.tex  interfaceai__optics_1_1units.tex  namespaceai__accessor.tex  namespaceai__aerosol.tex  namespaceai__aerosol__state.tex  namespaceai__environmental__state.tex  namespaceai__optics.tex  namespaceai__optics__absorption__optical__depth.tex  namespaceai__optics__asymmetry__factor.tex  namespaceai__optics__extinction__optical__depth.tex  namespaceai__optics__forward__scattered__fraction.tex  namespaceai__optics__single__scatter__albedo.tex  namespaceai__wavelength__grid.tex  namespaces.tex  (+24 more)
src/: CMakeLists.txt  accessor.F90  aerosol.F90  aerosol_state.F90  constants.F90  environmental_state.F90  optical_property.F90  optics.F90  property.F90  util.F90  wavelength_grid.F90
src/optics/: absorption_optical_depth.F90  asymmetry_factor.F90  extinction_optical_depth.F90  forward_scattered_fraction.F90  single_scatter_albedo.F90
test/: CMakeLists.txt  environmental_state.F90  optics.F90  wavelength_grid.F90
test/optics/: absorption_optical_depth.F90  asymmetry_factor.F90  extinction_optical_depth.F90  forward_scattered_fraction.F90  single_scatter_albedo.F90
